[package]
name = "imgui-vulkano-renderer"
version = "0.1.2"
authors = ["Sam Blazes"]
edition = "2018"

repository = "https://github.com/Tenebryo/imgui-vulkano-renderer"
readme = "README.md"
license-file = "MIT"
description = "A renderer for imgui-rs using Vulkano"
categories = ["gui", "rendering"]
keyword = ["vulkano", "imgui", "graphics", "gui", "rendering"]

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
imgui = { version = "0.5" }

[dev-dependencies]
clipboard = "0.5.0"
imgui-winit-support = "0.5"
vulkano-win = "0.19"
winit = "0.22"
image = "0.23"